--- a/editableTEST.html
+++ b/editableTEST.html
@@ -80,7 +80,7 @@
                         <a href="mailto:contact@techteam.com">contact@techteam.com</a>
                     
                     </p><p></p></div>
-            </div><div data-silex-type="text" class="editable-style silex-id-1560763910616-0 text-element" data-silex-id="silex-id-1560763910616-0"><div class="silex-element-content normal"><h2><a href="#!page-page-1">PAGE 1</a></h2></div></div></div>
+            </div><div data-silex-type="text" class="editable-style silex-id-1560763910616-0 text-element" data-silex-id="silex-id-1560763910616-0"><div class="silex-element-content normal"><h2><a href="#!page-page-1" class="">PAGE 1</a></h2></div></div></div>
     </div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1492793481801-7 section-element" data-silex-id="silex-id-1492793481801-7">
         <div data-silex-type="container" class="editable-style silex-id-1492793481801-6 container-element silex-element-content silex-container-content website-width prevent-draggable" data-silex-id="silex-id-1492793481801-6">
             <div data-silex-type="container" class="editable-style container-element rotated top-z silex-id-1439573537452-20" data-silex-id="silex-id-1439573537452-20"></div>
@@ -363,4 +363,4 @@
 
 
 
-<div data-silex-type="text" class="editable-style text-element silex-id-1560763964757-1" data-silex-id="silex-id-1560763964757-1"><div class="silex-element-content normal"><h2><a href="#!page-page2">PAGE 2</a></h2></div></div></body></html>
+<div data-silex-type="text" class="editable-style text-element silex-id-1560763964757-1" data-silex-id="silex-id-1560763964757-1"><div class="silex-element-content normal"><h2><a href="#!page-page2" class="">PAGE 2</a></h2></div></div></body></html>
