--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     
 
     
-<meta name="viewport" content="width=device-width, initial-scale=1"><meta name="hostingProvider" content="unifile"><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><link href="https://fontlibrary.org/face/beon" rel="stylesheet" class="silex-custom-font"><link href="https://fontlibrary.org/face/hi" rel="stylesheet" class="silex-custom-font"><link href="https://fontlibrary.org/face/hilo-deco" rel="stylesheet" class="silex-custom-font"><link href="https://fontlibrary.org/face/datalegreya" rel="stylesheet" class="silex-custom-font"><link href="css/styles.css" rel="stylesheet" type="text/css"><style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
+<meta name="viewport" content="width=device-width, initial-scale=1"><meta name="hostingProvider" content="ghpages"><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><link href="https://fontlibrary.org/face/beon" rel="stylesheet" class="silex-custom-font"><link href="https://fontlibrary.org/face/hi" rel="stylesheet" class="silex-custom-font"><link href="https://fontlibrary.org/face/hilo-deco" rel="stylesheet" class="silex-custom-font"><meta name="websiteUrl" content="https://fannysophie.github.io/TEST_SITE/"><link href="https://fontlibrary.org/face/datalegreya" rel="stylesheet" class="silex-custom-font"><link href="css/styles.css" rel="stylesheet" type="text/css"><style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 <body class="body-initial all-style enable-mobile silex-runtime silex-published" data-silex-type="container">
     <div class="silex-pages">
