--- a/editable.html
+++ b/editable.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://editor.silex.me/static/2.9/normalize.css" data-silex-static="">
     <link rel="stylesheet" href="https://editor.silex.me/static/2.9/front-end.css" data-silex-static="">
 
-    <style type="text/css" class="silex-style">#conteneur {display: flex; flex-wrap: wrap; justify-content: space-around;}.contenant {overflow: auto; word-wrap: break-word; margin: auto;}</style>
+    <style type="text/css" class="silex-style">#conteneur {display: flex; flex-wrap: wrap; justify-content: space-around;}.contenant {overflow: auto; word-wrap: break-word; margin: auto; align-content: center;}</style>
     <script type="text/javascript" class="silex-script"></script>
     <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1478366444112-1 {top: 100px; background-color: transparent; min-width: 960px;}.silex-id-1478366444112-0 {top: 15px; left: 220px; min-height: 146px; background-color: transparent;}.silex-id-1564008210776-0 {width: 960px; top: 26px; left: 0px; min-height: 69px; background-color: rgb(255, 255, 255);}.silex-id-1474394621033-3 {top: 5px; left: 0px;}.silex-id-1474394621032-2 {min-height: 600px; background-color: transparent; width: 1200px;}.silex-id-1478366450713-3 {top: 100px; background-color: transparent;}.silex-id-1478366450713-2 {min-height: 100px; background-color: transparent; width: 1200px;}.silex-id-1442914737143-3 {min-height: 53px; width: 349px; top: 29px; left: 430px;}</style>
     <title></title>
