--- a/editable.html
+++ b/editable.html
@@ -11,20 +11,26 @@
     <link rel="stylesheet" href="https://editor.silex.me/static/2.9/normalize.css" data-silex-static="">
     <link rel="stylesheet" href="https://editor.silex.me/static/2.9/front-end.css" data-silex-static="">
 
-    <style type="text/css" class="silex-style">#conteneur {display: flex; flex-wrap: wrap; justify-content: space-around; align-items: center; height: 3em;}.contenant {margin: auto;}hover:contenant {color: red;}</style>
+    <style type="text/css" class="silex-style">#conteneur {display: flex; flex-wrap: wrap; justify-content: space-around; align-items: center; height: 3em; flex-direction: row;}.contenant {margin: auto;}hover:contenant {color: red;}</style>
     <script type="text/javascript" class="silex-script"></script>
-    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1478366444112-1 {top: 100px; background-color: transparent; min-width: 960px;}.silex-id-1478366444112-0 {top: 15px; left: 220px; min-height: 77px; background-color: transparent; width: 960px;}.silex-id-1564008210776-0 {width: 100%; top: 7px; left: 0px; min-height: 48px; background-color: rgb(255, 255, 255); border-width: 0 0 1px 0; border-style: dashed; border-color: rgba(46,81,122,1);}.silex-id-1474394621033-3 {top: 5px; left: 0px;}.silex-id-1474394621032-2 {min-height: 600px; background-color: transparent; width: 1200px;}.silex-id-1478366450713-3 {top: 100px; background-color: transparent;}.silex-id-1478366450713-2 {min-height: 100px; background-color: transparent; width: 1200px;}.silex-id-1442914737143-3 {min-height: 53px; width: 349px; top: 29px; left: 430px;}</style>
+    <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1478366444112-1 {top: 100px; background-color: transparent; min-width: 960px;}.silex-id-1478366444112-0 {top: 15px; left: 220px; min-height: 77px; background-color: transparent; width: 960px;}.silex-id-1474394621033-3 {top: 5px; left: 0px;}.silex-id-1474394621032-2 {min-height: 600px; background-color: transparent; width: 1200px;}.silex-id-1564008210776-0 {width: 1200px; top: 72px; left: 78px; min-height: 89px; background-color: rgb(255, 255, 255); border-width: 0 0 1px 0; border-style: dashed; border-color: rgba(46,81,122,1);}.silex-id-1478366450713-3 {top: 100px; background-color: transparent;}.silex-id-1478366450713-2 {min-height: 100px; background-color: transparent; width: 1200px;}.silex-id-1442914737143-3 {min-height: 53px; width: 349px; top: 29px; left: 430px;}</style>
     <title></title>
-    <script type="text/json" class="silex-json-styles">[{"fonts":[{"family":"'Roboto', sans-serif","href":"https://fonts.googleapis.com/css?family=Roboto"}],"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px","top":"","left":"","height":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px","height":""},"silex-id-1478366444112-0":{"top":"15px","left":"220px","min-height":"77px","background-color":"transparent","width":"960px"},"silex-id-1478366444112-1":{"top":"100px","background-color":"transparent","min-width":"960px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px","top":"","left":"","height":""},"silex-id-1478366450713-3":{"top":"100px","background-color":"transparent"},"silex-id-1564008210776-0":{"width":"100%","top":"7px","left":"0px","min-height":"48px","background-color":"rgb(255, 255, 255)","border-width":"0 0 1px 0 ","border-style":"dashed","border-color":"rgba(46,81,122,1)"}},"mobile":{},"prodotypeData":{"component":{},"style":{"all-style":{"className":"all-style","templateName":"text","displayName":"All style","styles":{"desktop":{"normal":{"className":"all-style","pseudoClass":"normal","All":{"font-family":"'Roboto', sans-serif"}}}}}}}}]</script>
+    <script type="text/json" class="silex-json-styles">[{"fonts":[{"family":"'Roboto', sans-serif","href":"https://fonts.googleapis.com/css?family=Roboto"}],"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"transparent","width":"1200px","top":"","left":"","height":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"430px","height":""},"silex-id-1478366444112-0":{"top":"15px","left":"220px","min-height":"77px","background-color":"transparent","width":"960px"},"silex-id-1478366444112-1":{"top":"100px","background-color":"transparent","min-width":"960px"},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent","width":"1200px","top":"","left":"","height":""},"silex-id-1478366450713-3":{"top":"100px","background-color":"transparent"},"silex-id-1564008210776-0":{"width":"1200px","top":"72px","left":"78px","min-height":"89px","background-color":"rgb(255, 255, 255)","border-width":"0 0 1px 0 ","border-style":"dashed","border-color":"rgba(46,81,122,1)"}},"mobile":{},"prodotypeData":{"component":{},"style":{"all-style":{"className":"all-style","templateName":"text","displayName":"All style","styles":{"desktop":{"normal":{"className":"all-style","pseudoClass":"normal","All":{"font-family":"'Roboto', sans-serif"}}}}}}}}]</script>
 
     
-<style class="silex-prodotype-style" type="text/css" data-style-id="all-style">.text-element > .silex-element-content {font-family: 'Roboto', sans-serif;}</style><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="hostingProvider" content="ghpages"><meta name="websiteUrl" content="https://fannysophie.github.io/TEST_SITE/"><meta name="publicationPath" content="{&quot;name&quot;:&quot;gh-pages&quot;,&quot;folder&quot;:&quot;TEST_SITE&quot;,&quot;path&quot;:&quot;TEST_SITE/gh-pages&quot;,&quot;service&quot;:&quot;github&quot;,&quot;url&quot;:&quot;https://FannySophie.github.io/TEST_SITE/&quot;}"><!-- Silex HEAD tag do not remove --><!-- End of Silex HEAD tag do not remove --></head>
+<style class="silex-prodotype-style" type="text/css" data-style-id="all-style">.text-element > .silex-element-content {font-family: 'Roboto', sans-serif;}</style><link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="hostingProvider" content="ghpages"><meta name="websiteUrl" content="https://fannysophie.github.io/TEST_SITE/"><meta name="publicationPath" content="{&quot;name&quot;:&quot;gh-pages&quot;,&quot;folder&quot;:&quot;TEST_SITE&quot;,&quot;path&quot;:&quot;TEST_SITE/gh-pages&quot;,&quot;service&quot;:&quot;github&quot;,&quot;url&quot;:&quot;https://FannySophie.github.io/TEST_SITE/&quot;}"><!-- Silex HEAD tag do not remove --><nav id="conteneur">
+    <ul>
+        <li class="element"><a href="index.html">Accueil</a></li>
+        <li class="element"><a href="documents.html">Forum</a></li>
+        <li class="element"><a href="contact.html">Contact</a></li>
+    </ul>
+</nav><!-- End of Silex HEAD tag do not remove --></head>
 
 <body data-silex-id="body-initial" class="body-initial all-style enable-mobile silex-runtime" data-silex-type="container">
     <div class="silex-pages">
         
 
-        <a id="page-page-1" data-silex-type="page" class="page-element" href="#!page-page-1">Page 1</a></div>
+        <a id="page-index" data-silex-type="page" class="page-element" href="#!page-index">index</a><a id="page-documents" href="#!page-documents" data-silex-type="page" class="page-element">documents</a><a id="page-contact" href="#!page-contact" data-silex-type="page" class="page-element">contact</a></div>
 
 
 
@@ -35,16 +41,16 @@
 
 
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366444112-1 section-element" data-silex-id="silex-id-1478366444112-1" style="">
-        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366444112-0 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366444112-0"><div data-silex-type="html" class="editable-style silex-id-1564008210776-0 html-element conteneur" data-silex-id="silex-id-1564008210776-0"><div class="silex-element-content"><div id="conteneur">
-    <div class="contenant">Accueil</div>
-    <div class="contenant">Documents</div>
-    <div class="contenant">Données</div>
-    <div class="contenant">Photos</div>
-    <div class="contenant">Contact</div>
-</div></div></div></div>
+        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366444112-0 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366444112-0"></div>
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element" data-silex-id="silex-id-1474394621033-3" style="">
-        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1474394621032-2"></div>
+        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1474394621032-2"><div data-silex-type="html" class="editable-style silex-id-1564008210776-0 html-element conteneur" data-silex-id="silex-id-1564008210776-0"><div class="silex-element-content"><nav>
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="forum.html">Forum</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav></div></div></div>
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366450713-3 section-element" data-silex-id="silex-id-1478366450713-3" style="">
         <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366450713-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366450713-2">
