--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -67,12 +67,12 @@
 
 
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1478366444112-1 section-element" data-silex-id="silex-id-1478366444112-1" style="">
-        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366444112-0 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366444112-0"><div data-silex-type="text" class="editable-style silex-id-1552765147494-1 text-element silex-component silex-component-hamburger prevent-resizable hide-on-desktop hamburger-menu" data-silex-id="silex-id-1552765147494-1"><div class="silex-element-content normal"><style>.hamburger-menu_1564048453204_745 {position: absolute;}.silex-editor .hamburger-menu_1564048453204_745 nav {left: -9999px;}.hamburger-menu_1564048453204_745 nav ul {margin-top: 80px;}.hamburger-menu_1564048453204_745 nav {opacity: 0; position: absolute; background-color: #ededed; transition: left 1s ease, height 0s ease 1s; left: -300px; width: 300px; height: 20px;}.hamburger-menu_1564048453204_745.open nav {opacity: 1; height: 100vh; left: 0; transition: left 1s ease, height 0s ease 0s;}.hamburger-menu_1564048453204_745 .nav-container {z-index: 10; position: absolute;}.hamburger-menu_1564048453204_745.open .nav-container {}.hamburger-menu_1564048453204_745 .hamburger-btn {z-index: 20; cursor: pointer; position: absolute;}.hamburger-menu_1564048453204_745 .hamburger-btn span {display: block; width: 30px; height: 5px; margin-bottom: 3px; position: relative; background-color: #000000; border: 1px solid #ffffff; border-radius: 3px; transition: border-color 0.1s ease-in,
+        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1478366444112-0 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1478366444112-0"><div data-silex-type="text" class="editable-style silex-id-1552765147494-1 text-element silex-component silex-component-hamburger prevent-resizable hide-on-desktop hamburger-menu" data-silex-id="silex-id-1552765147494-1"><div class="silex-element-content normal"><style>.hamburger-menu_1564050400508_920 {position: absolute;}.silex-editor .hamburger-menu_1564050400508_920 nav {left: -9999px;}.hamburger-menu_1564050400508_920 nav ul {margin-top: 80px;}.hamburger-menu_1564050400508_920 nav {opacity: 0; position: absolute; background-color: #ededed; transition: left 1s ease, height 0s ease 1s; left: -300px; width: 300px; height: 20px;}.hamburger-menu_1564050400508_920.open nav {opacity: 1; height: 100vh; left: 0; transition: left 1s ease, height 0s ease 0s;}.hamburger-menu_1564050400508_920 .nav-container {z-index: 10; position: absolute;}.hamburger-menu_1564050400508_920.open .nav-container {}.hamburger-menu_1564050400508_920 .hamburger-btn {z-index: 20; cursor: pointer; position: absolute;}.hamburger-menu_1564050400508_920 .hamburger-btn span {display: block; width: 30px; height: 5px; margin-bottom: 3px; position: relative; background-color: #000000; border: 1px solid #ffffff; border-radius: 3px; transition: border-color 0.1s ease-in,
       opacity 0.1s ease-in,
       transform 0.1s ease-in,
-      background 0.1s ease-in;}.hamburger-menu_1564048453204_745.open .hamburger-btn span {border-color: rgba(255, 255, 255, 0);}.hamburger-menu_1564048453204_745 .hamburger-btn span:first-child {transform-origin: 4px -2px;}.hamburger-menu_1564048453204_745.open .hamburger-btn span:first-child {transform: rotate(45deg) translate(7px, -4px);}.hamburger-menu_1564048453204_745.open .hamburger-btn span:nth-last-child(2) {opacity: 0;}.hamburger-menu_1564048453204_745 .hamburger-btn span:nth-child(3) {transform-origin: -11px 4px;}.hamburger-menu_1564048453204_745.open .hamburger-btn span:nth-child(3) {transform: rotate(-45deg) translate(0, 12px);}</style>
+      background 0.1s ease-in;}.hamburger-menu_1564050400508_920.open .hamburger-btn span {border-color: rgba(255, 255, 255, 0);}.hamburger-menu_1564050400508_920 .hamburger-btn span:first-child {transform-origin: 4px -2px;}.hamburger-menu_1564050400508_920.open .hamburger-btn span:first-child {transform: rotate(45deg) translate(7px, -4px);}.hamburger-menu_1564050400508_920.open .hamburger-btn span:nth-last-child(2) {opacity: 0;}.hamburger-menu_1564050400508_920 .hamburger-btn span:nth-child(3) {transform-origin: -11px 4px;}.hamburger-menu_1564050400508_920.open .hamburger-btn span:nth-child(3) {transform: rotate(-45deg) translate(0, 12px);}</style>
 <!-- inspired by https://codepen.io/erikterwan/pen/EVzeRP -->
-<div class="hamburger-menu_1564048453204_745 closed">
+<div class="hamburger-menu_1564050400508_920 closed">
     <div class="hamburger-btn fixed">
       <span></span>
       <span></span>
@@ -103,26 +103,26 @@
   var isOpen = false;
   function close() {
     isOpen = false;
-    $('.hamburger-menu_1564048453204_745').removeClass('open');
-    $('.hamburger-menu_1564048453204_745').addClass('closed');
+    $('.hamburger-menu_1564050400508_920').removeClass('open');
+    $('.hamburger-menu_1564050400508_920').addClass('closed');
   }
   function open() {
     isOpen = true;
-    $('.hamburger-menu_1564048453204_745').addClass('open');
-    $('.hamburger-menu_1564048453204_745').removeClass('closed');
+    $('.hamburger-menu_1564050400508_920').addClass('open');
+    $('.hamburger-menu_1564050400508_920').removeClass('closed');
   }
   function toggle() {
     if(isOpen) close();
     else open();
   }
-  var silexElement = $('.hamburger-menu_1564048453204_745').closest('.editable-style');
+  var silexElement = $('.hamburger-menu_1564050400508_920').closest('.editable-style');
   function move(data) {
     var offset = silexElement.offset();
-    $('.hamburger-menu_1564048453204_745 .nav-container').css({
+    $('.hamburger-menu_1564050400508_920 .nav-container').css({
       'transform': 'translate(' + (data.scrollLeft - (offset.left/data.scale)) + 'px, ' + (data.scrollTop - (offset.top/data.scale)) + 'px)'
     });
   }
-  $('.hamburger-menu_1564048453204_745 .hamburger-btn').click(function() { toggle(); });
+  $('.hamburger-menu_1564050400508_920 .hamburger-btn').click(function() { toggle(); });
   $(document).on('silex.scroll silex.resize', function(e, data) {
     close();
     move(data);
@@ -130,8 +130,8 @@
   close();
 })();
 </script>
-</div></div><div data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" data-silex-id="silex-id-1537545843556-0" style="" data-silex-href="#!page-accueil"><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" data-silex-id="silex-id-1537543126065-5" style=""></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" data-silex-id="silex-id-1537542841131-2" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></div><div data-silex-type="text" class="editable-style silex-id-1537543262916-6 text-element header hide-on-mobile text-editor-focus" data-silex-id="silex-id-1537543262916-6" style="" data-allow-silex-shortcuts="true"><div class="silex-element-content normal"><p><a href="#!page-accueil" title="Accueil">Accueil </a><a href="#!page-documents" title="Documents">Documents </a><a title="Données">Données </a><a href="#!page-photos">Photos</a> <a href="#!page-contact">Contact</a></p></div></div><div data-silex-type="html" class="editable-style silex-id-1564046507616-3 html-element" data-silex-id="silex-id-1564046507616-3"><div class="silex-element-content"><ul id="menu-deroulant">
-	<li><a href="#">Lien menu 1</a>
+</div></div><div data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" data-silex-id="silex-id-1537545843556-0" style="" data-silex-href="#!page-accueil"><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" data-silex-id="silex-id-1537543126065-5" style=""></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" data-silex-id="silex-id-1537542841131-2" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></div><div data-silex-type="text" class="editable-style silex-id-1537543262916-6 text-element header hide-on-mobile" data-silex-id="silex-id-1537543262916-6" style=""><div class="silex-element-content normal"><p><a href="#!page-accueil" title="Accueil">Accueil </a><a href="#!page-documents" title="Documents">Documents </a><a title="Données">Données </a><a href="#!page-photos">Photos</a> <a href="#!page-contact">Contact</a></p></div></div><div data-silex-type="html" class="editable-style silex-id-1564046507616-3 html-element" data-silex-id="silex-id-1564046507616-3"><div class="silex-element-content"><ul id="menu-deroulant">
+	<li><a href="#!page-documents">Lien menu 1</a>
 		<ul>
 			<li><a href="#">lien sous menu 1</a></li>
 			<li><a href="#">lien sous menu 1</a></li>
