--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="https://editor.silex.me/static/2.9/front-end.css" data-silex-static="">
 
     <style type="text/css" class="silex-style">#menu-demo2,
-#menu-demo2 ul {padding: 0; margin: 0; list-style: none; text-align: center; font-family: GlacialIndifferenceRegular, sans-serif;}#menu-demo2 li {display: inline-block;}#menu-demo2 ul li {display: inherit; border-radius: 0;}#menu-demo2 ul li:hover {border-radius: 0;}#menu-demo2 ul li:last-child {border-radius: 0 0 0px 0px;}#menu-demo2 ul {position: absolute; z-index: 1000; max-height: 0; left: 0; right: 0; overflow: hidden; -moz-transition: .8s all .3s; -webkit-transition: .8s all .3s; transition: .8s all .3s;}#menu-demo2 li:hover ul {max-height: 15em;}#menu-demo2 li:first-child {background-color: #abedd8; background-image: linear-gradient(to bottom, #abedd8 0%, #46cdcf 100%);}#menu-demo2 li:nth-child(2) {background-color: #729EBF; background-image: linear-gradient(to bottom, #729EBF 0%, #333A40 100%);}#menu-demo2 li:nth-child(3) {background-color: #abedd8; background-image: linear-gradient(to bottom, #abedd8 0%, #46cdcf 100%);}#menu-demo2 li:last-child {background-color: #729EBF; background-image: linear-gradient(to bottom, #729EBF 0%, #333A40 100%);}#menu-demo2 li:first-child li {background: #F6AD1A;}#menu-demo2 li:nth-child(2) li {background: #729EBF;}#menu-demo2 li:nth-child(3) li {background: #F6AD1A;}#menu-demo2 li:last-child li {background: #729EBF;}#menu-demo2 li:first-child:hover,
+#menu-demo2 ul {padding: 0; margin: 0; list-style: none; text-align: center; font-family: GlacialIndifferenceRegular, sans-serif;}#menu-demo2 li {display: inline-block;}#menu-demo2 ul li {display: inherit; border-radius: 0;}#menu-demo2 ul li:hover {border-radius: 0;}#menu-demo2 ul li:last-child {border-radius: 0 0 0px 0px;}#menu-demo2 ul {position: absolute; z-index: 1000; max-height: 0; left: 0; right: 0; overflow: hidden; -moz-transition: .8s all .3s; -webkit-transition: .8s all .3s; transition: .8s all .3s;}#menu-demo2 li:hover ul {max-height: 15em;}#menu-demo2 li:first-child {background-color: #abedd8; background-image: linear-gradient(to bottom, #abedd8 0%, #46cdcf 100%);}#menu-demo2 li:nth-child(2) {background-color: #729EBF; background-image: linear-gradient(to bottom, #729EBF 0%, #333A40 100%);}#menu-demo2 li:nth-child(3) {background-color: #abedd8; background-image: linear-gradient(to bottom, #abedd8 0%, #46cdcf 100%);}#menu-demo2 li:nth-child(4) {background-color: #abedd8; background-image: linear-gradient(to bottom, #abedd8 0%, #46cdcf 100%);}#menu-demo2 li:last-child {background-color: #729EBF; background-image: linear-gradient(to bottom, #729EBF 0%, #333A40 100%);}#menu-demo2 li:first-child li {background: #F6AD1A;}#menu-demo2 li:nth-child(2) li {background: #729EBF;}#menu-demo2 li:nth-child(3) li {background: #F6AD1A;}#menu-demo2 li:last-child li {background: #729EBF;}#menu-demo2 li:first-child:hover,
 #menu-demo2 li:first-child li:hover {background: #65537A;}#menu-demo2 li:nth-child(2):hover,
 #menu-demo2 li:nth-child(2) li:hover {background: #729EBF;}#menu-demo2 li:nth-child(3):hover,
 #menu-demo2 li:nth-child(3) li:hover {background: #F6AD1A;}#menu-demo2 li:last-child:hover,
@@ -150,6 +150,14 @@
 			<li><a href="#">Lien sous menu 2</a></li>
 			<li><a href="#">Lien sous menu 2</a></li>
 			<li><a href="#">Lien sous menu 2</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Lien menu 3</a>
+		<ul>
+			<li><a href="#">lien sous menu 3</a></li>
+			<li><a href="#">lien sous menu 3</a></li>
+			<li><a href="#">lien sous menu 3</a></li>
+			<li><a href="#">lien sous menu 3</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Lien menu 3</a>
