--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element page-link-active" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
-	<li><a href="#">Lien menu 1</a>
+</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element page-link-active" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
+	<li><a href="#">Accueil</a>
 		<ul>
 			<li><a href="#">lien sous menu 1</a></li>
 			<li><a href="#">lien sous menu 1</a></li>
@@ -108,7 +108,7 @@
 			<li><a href="#">lien sous menu 1</a></li>
 		</ul>
 	</li>
-	<li><a href="#">Lien menu 2</a>
+	<li><a href="#">Documents</a>
 		<ul>
 			<li><a href="#">Lien sous menu 2</a></li>
 			<li><a href="#">Lien sous menu 2</a></li>
@@ -116,7 +116,7 @@
 			<li><a href="#">Lien sous menu 2</a></li>
 		</ul>
 	</li>
-	<li><a href="#">Lien menu 3</a>
+	<li><a href="#">Données</a>
 		<ul>
 			<li><a href="#">lien sous menu 3</a></li>
 			<li><a href="#">lien sous menu 3</a></li>
@@ -124,7 +124,15 @@
 			<li><a href="#">lien sous menu 3</a></li>
 		</ul>
 	</li>
-	<li><a href="#">Lien menu 4</a>
+	<li><a href="#">Photos</a>
+		<ul>
+			<li><a href="#">lien sous menu 3</a></li>
+			<li><a href="#">lien sous menu 3</a></li>
+			<li><a href="#">lien sous menu 3</a></li>
+			<li><a href="#">lien sous menu 3</a></li>
+		</ul>
+	</li>
+	<li><a href="#">Contact</a>
 		<ul>
 			<li><a href="#">Lien sous menu 4</a></li>
 			<li><a href="#">Lien sous menu 4</a></li>
