--- a/photos.html
+++ b/photos.html
@@ -99,7 +99,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></div></a></div>
+</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div></a></div>
     </div>
     
     
