--- a/acceuil_en.html
+++ b/acceuil_en.html
@@ -99,7 +99,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" style=""><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></a><a href="acceuil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-acceuil_en page-link-active"></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-acceuil_en"></a><div data-silex-type="html" class="editable-style html-element hide-on-mobile silex-id-1564055844089-4 paged-element page-acceuil_en page-documents_en page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
+</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" style=""><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-acceuil_en"></a><div data-silex-type="html" class="editable-style html-element hide-on-mobile silex-id-1564055844089-4 paged-element page-acceuil_en page-documents_en page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="#">Home</a>
 		<ul>
 			<li><a href="#">lien sous menu 1</a></li>
@@ -140,7 +140,7 @@
 			<li><a href="#">Lien sous menu 4</a></li>
 		</ul>
 	</li>
-</ul></div></div></div>
+</ul></div></div><a href="acceuil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-acceuil_en page-link-active"></a></div>
     </div>
     
     
