--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element page-link-active" style=""><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-documents page-donn-es page-photos page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
+</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element page-link-active" style=""><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-acceuil_en page-link-active"></a><a href="acceuil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-acceuil_en"></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-documents page-donn-es page-photos page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="#">Accueil</a>
 		<ul>
 			<li><a href="#">lien sous menu 1</a></li>
@@ -140,10 +140,14 @@
 			<li><a href="#">Lien sous menu 4</a></li>
 		</ul>
 	</li>
-</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-acceuil_en page-link-active"></a><a href="acceuil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-acceuil_en"></a></div>
+</ul></div></div><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element page-link-active"><div class="silex-element-content"><div class="dropdown">
+    <p>Identifiant</p>
+    <p>Mot de passe</p>
+ <button class="boutonmenuprincipal">Connexion</button>
+</div></div></div></div>
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element paged-element page-accueil page-link-active" style="">
-        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width"><div data-silex-type="text" class="editable-style silex-id-1537544309118-10 text-element text-style-1 hide-on-mobile" style=""><div class="silex-element-content normal">Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
+        <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width"><div data-silex-type="text" class="editable-style silex-id-1537544309118-10 text-element text-style-1 hide-on-mobile" style=""><div class="silex-element-content normal"><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
 l'une des plus importantes sources karstiques d'Europe. Il s'agit en 
 effet de l'exutoire quasi-unique d'un système karstique exceptionnel 
 tant par la surface de son bassin d'alimentation (1130 km²) que par 
@@ -161,7 +165,7 @@ réseau de drainage est développé sous le niveau de leur exutoire. En
 aval de la source, les Sorgues sont associées à des enjeux sociétaux 
 importants (annonce de crue, irrigation, biodiversité et tourisme vert).
 
-<p>Les travaux menés au sein de l'observatoire visent à 
+</p><p>Les travaux menés au sein de l'observatoire visent à 
 améliorer la compréhension et la modélisation conceptuelle et numérique 
 du fonctionnement hydrodynamique et hydrochimique des différents 
 compartiments des hydrosystèmes karstiques, en contexte de changement 
@@ -169,21 +173,17 @@ global. Ils s'appuient sur des observations pluridisciplinaires, menées à
  différentes échelles Cet ensemble hydrosystème, bassin aval est l'un 
 des sites expérimentaux privilégiés de l'UMR 1114 EMMAH (UAPV-INRA) et 
 la communauté de recherche impliquée ne se restreint pas aux 
-hydrogéologues du karst.</p>
+hydrogéologues du karst.</p><p>
 
-<p>Les suivis long-terme assurés par l'observatoire sont les suivants:</p>
-<ul>
-<li>
+</p><p>Les suivis long-terme assurés par l'observatoire sont les suivants:</p>
+<ul><li>
 Suivi des paramètres physiques, hydrochimique, isotopique et de 
 fluorescence naturelle à la source de fontaine de Vaucluse et pour 
 plusieurs dizaines de points d'écoulements en zone non saturée (galerie 
-du LSBB)</li>
-<li>Suivi hydrodynamique en cavité karstique et forage (ZS et ZNS)</li>
-<li>Suivi météorologique (site du LSBB)</li>
-</ul>
+du LSBB)</li><li>Suivi hydrodynamique en cavité karstique et forage (ZS et ZNS)</li><li>Suivi météorologique (site du LSBB)</li></ul><p></p><p></p><p></p><p></p>
 <p>Le suivi hydrométrique de la source est assuré par 
 les services de l'état: moyennes mensuelles depuis 1887, débits 
-journaliers depuis 1967 et horaires depuis 1994. </p><br></div></div><div data-silex-type="text" class="editable-style silex-id-1564057655078-9 text-element"><div class="silex-element-content normal"><h3><b>FONTAINE DE VAUCLUSE / LSBB (Laboratoire souterrain à Bas Bruit) </b></h3></div></div></div>
+journaliers depuis 1967 et horaires depuis 1994. </p></div></div><div data-silex-type="text" class="editable-style silex-id-1564057655078-9 text-element"><div class="silex-element-content normal"><h3><b>FONTAINE DE VAUCLUSE / LSBB (Laboratoire souterrain à Bas Bruit) </b></h3></div></div></div>
     </div>
     
 
