--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -192,8 +192,8 @@
 			<li><a href="#">Moulis</a></li>
 			<li><a href="#">Val d'Orléans</a></li>
 			<li><a href="#">Karst de la craie</a></li>
-			<li><a href="#">Medycyss/a&gt;</a></li><a href="#"></a>
-			<li><a href="#"></a><a href="#">Fontaine de Nîmes</a></li>
+			<li><a href="#">Medycyss</a></li>
+			<li><a href="#">Fontaine de Nîmes</a></li>
 			<li><a href="#">Port Miou</a></li>
 			<li><a href="#">Jurassic Karst</a></li>
 			<li><a href="#">Karsts Aquitains</a></li>
