--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -43,7 +43,7 @@
 
     <style type="text/css" class="silex-style">#menu-demo2,
 #menu-demo2 ul {padding: 0; margin: 0; list-style: none; text-align: center; font-family: GlacialIndifferenceRegular, sans-serif;}#menu-demo2 li {display: inline-block;}#menu-demo2 ul li {display: inherit; border-radius: 0;}#menu-demo2 ul li:hover {border-radius: 0;}#menu-demo2 ul li:last-child {border-radius: 0 0 0px 0px;}#menu-demo2 ul {position: absolute; z-index: 1000; max-height: 0; left: 0; right: 0; overflow: hidden; -moz-transition: .8s all .3s; -webkit-transition: .8s all .3s; transition: .8s all .3s;}#menu-demo2 li:hover ul {max-height: 20em;}#menu-demo2 li:first-child li {background: rgba(2, 92, 110, 0.66);}#menu-demo2 li:nth-child(2) li {background: rgba(4, 89, 180, 0.68);}#menu-demo2 li:nth-child(3) li {background: rgba(2, 92, 110, 0.66);}#menu-demo2 li:nth-child(4) li {background: rgba(4, 89, 180, 0.68);}#menu-demo2 li:last-child li {background: rgba(2, 92, 110, 0.66);}#menu-demo2 li:first-child:hover,
-#menu-demo2 li:first-child li:hover {background: #65537A;}#menu-demo2 li:nth-child(2):hover,
+#menu-demo2 li:first-child li:hover {background: rgba(21, 141, 239, 0.66);}#menu-demo2 li:nth-child(2):hover,
 #menu-demo2 li:nth-child(2) li:hover {background: #729EBF;}#menu-demo2 li:nth-child(3):hover,
 #menu-demo2 li:nth-child(3) li:hover {background: #F6AD1A;}#menu-demo2 li:nth-child(4):hover,
 #menu-demo2 li:nth-child(4) li:hover {background: #F6AD1A;}#menu-demo2 li:last-child:hover,
