--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -323,8 +323,8 @@ $(document).on('silex.resize', function() {
 	</li>
 	<li><a href="#">Logiciels</a>
 		<ul>
-			<li><a href="#">KASTMOD</a></li>
-			<li><a href="#">Plugin PaPRIKa</a></li>
+			<li><a href="#!page-karstmod">KASTMOD</a></li>
+			<li><a href="#!page-PaPRIKa">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
 </ul></div></div><div data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-acceuil_en" data-silex-id="silex-id-1564055719659-1" data-silex-href="#!page-accueil"></div><div data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-acceuil_en" data-silex-id="silex-id-1564055740047-3" data-silex-href="#!page-acceuil_en"></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" data-silex-id="silex-id-1537543126065-5" style="" data-silex-href="#!page-accueil"></div><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element con hide-on-mobile" data-silex-id="silex-id-1564058193055-10"><div class="silex-element-content">
