--- a/index.html
+++ b/index.html
@@ -161,9 +161,11 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-accueil_en page-link-active"></a><a href="accueil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-accueil_en"></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element page-link-active" style=""></a><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element con hide-on-mobile page-link-active"><div class="silex-element-content">
- <button class="connexion">Connexion</button>
-</div></div></div>
+</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-accueil_en page-link-active"></a><a href="accueil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-accueil_en"></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element page-link-active" style=""></a><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element con hide-on-mobile page-link-active"><div class="silex-element-content"><div class="connexion">
+  <p>
+   <a href="contact.html">Connexion</a>
+ </p>
+</div></div></div></div>
     </div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1564077070368-13 section-element page-accueil paged-element page-link-active"><div data-silex-type="container" class="editable-style silex-id-1564077070365-12 container-element silex-element-content silex-container-content website-width prevent-draggable"><div data-silex-type="text" class="editable-style silex-id-1564077354121-24 text-element text-style-4"><div class="silex-element-content normal"><p>Le Karst constitue un objet hydrogéologique complexe 
 qui nécessite des approches et des modèles dédiés et originaux. Le SNO 
 KARST a pour ambition de faire émerger des questions et avancées 
