--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element page-link-active" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-fontaine page-donnees page-hal page-workshop1 page-prensentation page-partenaires page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
+</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element page-link-active" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-fontaine page-donnees page-hal page-workshop1 page-prensentation page-partenaires page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="page-link-active">Accueil</a>
 		<ul>
 			<li><a href="presentation.html">Présentation</a></li>
@@ -161,7 +161,7 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-accueil_en page-link-active"></a><a href="accueil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-accueil_en"></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element page-link-active" style=""></a><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element con hide-on-mobile page-link-active"><div class="silex-element-content"><div class="connexion">
+</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1564055719659-1 container-element page-accueil paged-element page-accueil_en page-link-active"></a><a href="accueil_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564055740047-3 page-accueil paged-element page-accueil_en"></a><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element con hide-on-mobile page-link-active"><div class="silex-element-content"><div class="connexion">
   <p>
    <a href="contact.html">Connexion</a>
  </p>
