--- a/fontaine.html
+++ b/fontaine.html
@@ -118,7 +118,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-fontaine page-donnees page-hal page-workshop1 page-prensentation page-partenaires page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
+</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element" style=""><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style="" data-silex-href="#!page-accueil"></div></a><div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element page-accueil paged-element hide-on-mobile page-fontaine page-donnees page-hal page-workshop1 page-prensentation page-partenaires page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="">Accueil</a>
 		<ul>
 			<li><a href="presentation.html">Présentation</a></li>
@@ -161,7 +161,7 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a></div>
+</ul></div></div></div>
     </div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element paged-element page-fontaine page-link-active" style="">
         
     <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width"><div data-silex-type="container" class="editable-style container-element silex-id-1564081912980-29"></div></div><div data-silex-type="text" class="editable-style silex-id-1564057655078-9 text-element"><div class="silex-element-content normal"><h3><b>FONTAINE DE VAUCLUSE / LSBB (Laboratoire souterrain à Bas Bruit) </b></h3></div></div><div data-silex-type="text" class="editable-style silex-id-1537544309118-10 text-element text-style-1 hide-on-mobile" style=""><div class="silex-element-content normal"><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
