--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -277,7 +277,7 @@ $(document).on('silex.resize', function() {
 			<li><a href="#!page-worksop4">Workshop 4</a></li>
 			<li><a href="#!page-worksop5">Workshop 5</a></li>
 			<li><a href="#!page-worksop6">Workshop 6</a></li>
-			<li><a href="#!page-rencontre">1ère Rencontre</a></li>
+			<li><a href="#!page-rencontre">First meeting</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Softwares</a>
@@ -309,7 +309,7 @@ $(document).on('silex.resize', function() {
 		<li><a href="#">Données</a>
 		<ul>
 			<li><a href="#!page-donnees">Nos données</a></li>
-			<li><a href="#!page-hal">Notre HAL</a></li>
+			<li><a href="#!page-hal">Nos documents HAL</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Espace Membre</a>
