--- a/fontaine_en.html
+++ b/fontaine_en.html
@@ -161,7 +161,7 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div><a href="donnees.html" data-silex-type="container" class="editable-style container-element silex-id-1564056536962-6 paged-element page-fontaine_en page-contact"></a><a href="fontaine_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564056527789-5 paged-element page-fontaine_en page-contact page-link-active"></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a></div>
+</ul></div></div><a href="donnees.html" data-silex-type="container" class="editable-style container-element silex-id-1564056536962-6 paged-element page-fontaine_en page-contact"></a><a href="fontaine_en.html" data-silex-type="container" class="editable-style container-element silex-id-1564056527789-5 paged-element page-fontaine_en page-contact page-link-active"></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a></div>
     <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="">Accueil</a>
 		<ul>
