--- a/fontaine.html
+++ b/fontaine.html
@@ -118,7 +118,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a></div>
+</div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a></div>
     <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="">Accueil</a>
 		<ul>
@@ -164,7 +164,15 @@
 	</li>
 </ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element paged-element page-fontaine page-link-active" style="">
         
-    <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width"><div data-silex-type="container" class="editable-style container-element silex-id-1564081912980-29"></div></div><div data-silex-type="text" class="editable-style silex-id-1564057655078-9 text-element"><div class="silex-element-content normal"><h3><b>FONTAINE DE VAUCLUSE / LSBB (Laboratoire souterrain à Bas Bruit) </b></h3></div></div><div data-silex-type="text" class="editable-style silex-id-1537544309118-10 text-element text-style-1 hide-on-mobile" style=""><div class="silex-element-content normal"><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
+    <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width"><div data-silex-type="text" class="editable-style silex-id-1564163312596-2 text-element"><div class="silex-element-content normal"><p>Les suivis long-terme assurés par l'observatoire sont les suivants:</p>
+<ul><li>
+Suivi des paramètres physiques, hydrochimique, isotopique et de 
+fluorescence naturelle à la source de fontaine de Vaucluse et pour 
+plusieurs dizaines de points d'écoulements en zone non saturée (galerie 
+du LSBB)</li><li>Suivi hydrodynamique en cavité karstique et forage (ZS et ZNS)</li><li>Suivi météorologique (site du LSBB)</li></ul><p></p><p></p><p></p><p></p>
+<p>Le suivi hydrométrique de la source est assuré par 
+les services de l'état: moyennes mensuelles depuis 1887, débits 
+journaliers depuis 1967 et horaires depuis 1994. </p></div></div><div data-silex-type="container" class="editable-style silex-id-1564081786020-28 container-element"></div></div><div data-silex-type="text" class="editable-style silex-id-1564057655078-9 text-element"><div class="silex-element-content normal"><h3><b>FONTAINE DE VAUCLUSE / LSBB (Laboratoire souterrain à Bas Bruit) </b></h3></div></div><div data-silex-type="text" class="editable-style silex-id-1537544309118-10 text-element text-style-1 hide-on-mobile" style=""><div class="silex-element-content normal"><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
 l'une des plus importantes sources karstiques d'Europe. Il s'agit en 
 effet de l'exutoire quasi-unique d'un système karstique exceptionnel 
 tant par la surface de son bassin d'alimentation (1130 km²) que par 
@@ -182,7 +190,7 @@ réseau de drainage est développé sous le niveau de leur exutoire. En
 aval de la source, les Sorgues sont associées à des enjeux sociétaux 
 importants (annonce de crue, irrigation, biodiversité et tourisme vert).
 
-</p><p>Les travaux menés au sein de l'observatoire visent à 
+</p><br></div></div><div data-silex-type="text" class="editable-style silex-id-1564163242243-1 text-element text-style-1"><div class="silex-element-content normal"><p>Les travaux menés au sein de l'observatoire visent à 
 améliorer la compréhension et la modélisation conceptuelle et numérique 
 du fonctionnement hydrodynamique et hydrochimique des différents 
 compartiments des hydrosystèmes karstiques, en contexte de changement 
@@ -190,17 +198,7 @@ global. Ils s'appuient sur des observations pluridisciplinaires, menées à
  différentes échelles Cet ensemble hydrosystème, bassin aval est l'un 
 des sites expérimentaux privilégiés de l'UMR 1114 EMMAH (UAPV-INRA) et 
 la communauté de recherche impliquée ne se restreint pas aux 
-hydrogéologues du karst.</p><p>
-
-</p><p>Les suivis long-terme assurés par l'observatoire sont les suivants:</p>
-<ul><li>
-Suivi des paramètres physiques, hydrochimique, isotopique et de 
-fluorescence naturelle à la source de fontaine de Vaucluse et pour 
-plusieurs dizaines de points d'écoulements en zone non saturée (galerie 
-du LSBB)</li><li>Suivi hydrodynamique en cavité karstique et forage (ZS et ZNS)</li><li>Suivi météorologique (site du LSBB)</li></ul><p></p><p></p><p></p><p></p>
-<p>Le suivi hydrométrique de la source est assuré par 
-les services de l'état: moyennes mensuelles depuis 1887, débits 
-journaliers depuis 1967 et horaires depuis 1994. </p></div></div><div data-silex-type="container" class="editable-style silex-id-1564081786020-28 container-element"></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
+hydrogéologues du karst.New text box</p></div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos données<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729664972-94" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos Publications<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
