--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element page-link-active" style=""></a><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header page-link-active" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element con hide-on-mobile page-link-active"><div class="silex-element-content"><div class="connexion">
+</div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header page-link-active" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element page-link-active" style=""></a><div data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element con hide-on-mobile page-link-active"><div class="silex-element-content"><div class="connexion">
   <p>
    <a href="contact.html">Connexion</a>
  </p>
