--- a/fontaine.html
+++ b/fontaine.html
@@ -119,7 +119,7 @@
 })();
 </script>
 </div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a></div>
-    <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile"><div class="silex-element-content"><ul id="menu-demo2">
+    <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile page-accueil paged-element page-prensentation page-partenaires page-fontaine page-donnees page-hal page-workshop1 page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="">Accueil</a>
 		<ul>
 			<li><a href="presentation.html">Présentation</a></li>
@@ -141,7 +141,7 @@
 	</li>
 		<li><a href="#">Données</a>
 		<ul>
-			<li><a href="donnees.html">Nos données</a></li>
+			<li><a href="donnees.html" class="">Nos données</a></li>
 			<li><a href="hal.html">Nos documents HAL</a></li>
 		</ul>
 	</li>
@@ -162,43 +162,7 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element paged-element page-fontaine page-link-active" style="">
-        
-    <div data-silex-type="container" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width"><div data-silex-type="text" class="editable-style silex-id-1564163312596-2 text-element"><div class="silex-element-content normal"><p>Les suivis long-terme assurés par l'observatoire sont les suivants:</p>
-<ul><li>
-Suivi des paramètres physiques, hydrochimique, isotopique et de 
-fluorescence naturelle à la source de fontaine de Vaucluse et pour 
-plusieurs dizaines de points d'écoulements en zone non saturée (galerie 
-du LSBB)</li><li>Suivi hydrodynamique en cavité karstique et forage (ZS et ZNS)</li><li>Suivi météorologique (site du LSBB)</li></ul><p></p><p></p><p></p><p></p>
-<p>Le suivi hydrométrique de la source est assuré par 
-les services de l'état: moyennes mensuelles depuis 1887, débits 
-journaliers depuis 1967 et horaires depuis 1994. </p></div></div><div data-silex-type="container" class="editable-style silex-id-1564081786020-28 container-element"></div></div><div data-silex-type="text" class="editable-style silex-id-1564057655078-9 text-element"><div class="silex-element-content normal"><h3><b>FONTAINE DE VAUCLUSE / LSBB (Laboratoire souterrain à Bas Bruit) </b></h3></div></div><div data-silex-type="text" class="editable-style silex-id-1537544309118-10 text-element text-style-1 hide-on-mobile" style=""><div class="silex-element-content normal"><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
-l'une des plus importantes sources karstiques d'Europe. Il s'agit en 
-effet de l'exutoire quasi-unique d'un système karstique exceptionnel 
-tant par la surface de son bassin d'alimentation (1130 km²) que par 
-l'épaisseur de ses zones non saturée (en moyenne 800 m) et saturée (&gt;
- 300 m). L'ampleur du système permet d'appréhender l'impact de la 
-variabilité latérale des environnements de dépôt sur les faciès 
-carbonatés, sur les processus de fracturation et karstification et sur 
-la dynamique des écoulements. Les 3,7 km de tunnel de l'infrastructure 
-LSBB y offrent par ailleurs un accès unique aux écoulements de la zone 
-d'infiltration. La structuration messinienne de ce karst est typique du 
-pourtour méditerranéen. Le conduit d'amenée des eaux à l'émergence a 
-ainsi été reconnu jusqu'à la côte de -204 m NGF, et est à l'origine du 
-terme système vauclusien qui désigne les systèmes karstiques dont le 
-réseau de drainage est développé sous le niveau de leur exutoire. En 
-aval de la source, les Sorgues sont associées à des enjeux sociétaux 
-importants (annonce de crue, irrigation, biodiversité et tourisme vert).
-
-</p><br></div></div><div data-silex-type="text" class="editable-style silex-id-1564163242243-1 text-element text-style-1"><div class="silex-element-content normal"><p>Les travaux menés au sein de l'observatoire visent à 
-améliorer la compréhension et la modélisation conceptuelle et numérique 
-du fonctionnement hydrodynamique et hydrochimique des différents 
-compartiments des hydrosystèmes karstiques, en contexte de changement 
-global. Ils s'appuient sur des observations pluridisciplinaires, menées à
- différentes échelles Cet ensemble hydrosystème, bassin aval est l'un 
-des sites expérimentaux privilégiés de l'UMR 1114 EMMAH (UAPV-INRA) et 
-la communauté de recherche impliquée ne se restreint pas aux 
-hydrogéologues du karst.New text box</p></div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
+</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos données<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729664972-94" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos Publications<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
