--- a/prensentation_en.html
+++ b/prensentation_en.html
@@ -140,7 +140,7 @@
 	</li>
 		<li><a href="#">Data</a>
 		<ul>
-			<li><a href="donnees.html">Our data</a></li>
+			<li><a href="donnees.html" class="">Our data</a></li>
 			<li><a href="hal.html">Our doc on HAL</a></li>
 		</ul>
 	</li>
@@ -162,50 +162,41 @@
 		</ul>
 	</li>
 </ul></div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a></div>
-    <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile"><div class="silex-element-content"><ul id="menu-demo2">
-	<li><a href="index.html" class="">Accueil</a>
-		<ul>
-			<li><a href="presentation.html">Présentation</a></li>
-			<li><a href="partenaires.html">Partenaires et équipes</a></li>
-		</ul>
-	</li>
-	<li><a href="#">Obervatoires</a>
-		<ul>
-			<li><a href="fontaine.html" class="">Fontaine de Vaucluse</a></li>
-			<li><a href="moulis.html">Moulis</a></li>
-			<li><a href="val.html">Val d'Orléans</a></li>
-			<li><a href="craie.html">Karst de la craie</a></li>
-			<li><a href="medycyss.html">Medycyss</a></li>
-			<li><a href="nimes.html">Fontaine de Nîmes</a></li>
-			<li><a href="miou.html">Port Miou</a></li>
-			<li><a href="jurrasic.html">Jurassic Karst</a></li>
-			<li><a href="aquitains.html">Karsts Aquitains</a></li>
-		</ul>
-	</li>
-		<li><a href="#">Données</a>
-		<ul>
-			<li><a href="donnees.html">Nos données</a></li>
-			<li><a href="hal.html">Nos documents HAL</a></li>
-		</ul>
-	</li>
-	<li><a href="#">Espace Membre</a>
-		<ul>
-			<li><a href="worksop1.html">Workshop 1</a></li>
-			<li><a href="worksop2.html">Workshop 2</a></li>
-			<li><a href="worksop3.html">Workshop 3</a></li>
-			<li><a href="worksop4.html">Workshop 4</a></li>
-			<li><a href="worksop5.html">Workshop 5</a></li>
-			<li><a href="worksop6.html">Workshop 6</a></li>
-			<li><a href="rencontre.html">1ère Rencontre</a></li>
-		</ul>
-	</li>
-	<li><a href="#">Logiciels</a>
-		<ul>
-			<li><a href="karstmod.html">KASTMOD</a></li>
-			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
-		</ul>
-	</li>
-</ul></div></div><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
+    <a href="index.html" data-silex-type="container" class="editable-style silex-id-1537545843556-0 container-element langue" style=""></a></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1564077070368-13 section-element paged-element page-prensentation page-prensentation_en page-link-active"><div data-silex-type="container" class="editable-style silex-id-1564077070365-12 container-element silex-element-content silex-container-content website-width prevent-draggable"><div data-silex-type="text" class="editable-style silex-id-1564077354121-24 text-element text-style-4"><div class="silex-element-content normal"><p>Le Karst constitue un objet hydrogéologique complexe 
+qui nécessite des approches et des modèles dédiés et originaux. Le SNO 
+KARST a pour ambition de faire émerger des questions et avancées 
+scientifiques, spécifiquement en termes de modélisation des flux 
+hydrogéochimiques à l'exutoire des hydrosystèmes karstiques, ou encore 
+de liens entre changements globaux et composition physico-chimique des 
+eaux à l'interface entre compartiments hydrologique et hydrogéologique. 
+Une attention particulière est portée sur le lien données-modèles afin, 
+d'une part, de mieux comprendre la physique et la chimie du milieu et, 
+d'autre part, d'enrichir la capacité des modèles à reproduire les 
+variations de flux et de matières. On peut également noter que les 
+roches carbonatées qui hébergent les systèmes karstiques sont des 
+matériaux éminemment "fragiles" à l'érosion et l'altération, et que ces 
+mécanismes sont eux-mêmes très conditionnés par les modifications 
+attendues du climat, du régime hydrologique et pluviométrique. Ceci rend
+ les karsts encore plus vulnérables sur des échelles de temps assez 
+courtes, caractéristique en général moins prégnante dans les 
+hydrosystèmes classiques plus profonds ou de dynamique hydrique plus 
+lente. L'aspect transfert de matière et participation aux grands cycles 
+biogéochimiques est également une préoccupation forte de ce SNO, et ce 
+d'autant plus que la vulnérabilité des systèmes karstiques aux 
+modifications des conditions aux limites en surface est forte.</p><p>
+</p><p>Le SNO KARST constitue un lieu extrêmement propice à 
+fédérer les forces d'observation et de recherche actuelles sur les 
+aquifères karstiques pour comparer mutualiser et unifier les approches 
+(outils, méthodes, concepts). Ces acteurs travaillent à développer des 
+outils pour caractériser et modéliser l'évolution de la ressource en eau
+ (qualitatif, quantitatif) en réponse à des forages de courte, moyenne 
+et grande longueur d'onde, dans des contextes physiographiques, 
+géologiques et climatiques différents. Nous souhaitons tendre vers une 
+approche "synthétique" à l'échelle des grandes typologies karstiques, 
+depuis la caractérisation de leur structure et de leur fonctionnement 
+jusqu'à la modélisation hydrodynamique et hydrogéochimique des 
+transferts. Pour ce faire, il faut pérenniser une surveillance 
+temporelle des différents laboratoires naturels.</p></div></div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1537726585006-18 section-element"><div data-silex-type="container" class="editable-style silex-id-1537726585003-17 container-element silex-element-content silex-container-content website-width prevent-draggable"><div class="editable-style text-element silex-id-1537541949036-0 footer" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos données<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
             </div><div class="editable-style text-element footer silex-id-1537729664972-94" data-silex-type="text" style="">
                 <div class="silex-element-content normal"><h3>Nos Publications<br></h3><p><a href="https://www.silex.me/" target="_blank" title="Silex website builder">Powered by Silex</a><a href="https://www.free-css.com/assets/files/free-css-templates/preview/page231/travel/" target="_blank"><br>Inspired by this template</a><br><a href="https://unsplash.com/search/photos/travel" target="_blank" title="Travel photos">Photos from unslplash</a><br></p></div>
