--- a/rencontre.html
+++ b/rencontre.html
@@ -119,7 +119,7 @@
 })();
 </script>
 </div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="index.html" data-silex-type="container" class="editable-style silex-id-1537543126065-5 container-element" style=""></a></div>
-    <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile"><div class="silex-element-content"><ul id="menu-demo2">
+    <div data-silex-type="html" class="editable-style silex-id-1564051885986-0 html-element hide-on-mobile page-accueil paged-element page-prensentation page-partenaires page-fontaine page-donnees page-hal page-workshop1 page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-link-active"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="index.html" class="">Accueil</a>
 		<ul>
 			<li><a href="presentation.html">Présentation</a></li>
@@ -141,7 +141,7 @@
 	</li>
 		<li><a href="#">Données</a>
 		<ul>
-			<li><a href="donnees.html">Nos données</a></li>
+			<li><a href="donnees.html" class="">Nos données</a></li>
 			<li><a href="hal.html">Nos documents HAL</a></li>
 		</ul>
 	</li>
