--- a/fontaine.html
+++ b/fontaine.html
@@ -162,7 +162,19 @@
 			<li><a href="paprika.html" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1564165916629-14 page-fontaine paged-element page-link-active"><div data-silex-type="container" class="editable-style container-element silex-element-content silex-container-content website-width prevent-draggable silex-id-1564165916629-15"><div data-silex-type="container" class="editable-style container-element silex-id-1564165916629-16" style=""><div data-silex-type="text" class="editable-style text-element text-style-2 silex-id-1564165916645-24" style=""><div class="silex-element-content normal"><h2></h2><h3><b>FONTAINE DE VAUCLUSE <br></b></h3><h3><b>&nbsp;LSBB (Laboratoire souterrain à Bas Bruit) </b></h3><p></p><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
+</ul></div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1564165916629-14 page-fontaine paged-element page-link-active"><div data-silex-type="container" class="editable-style container-element silex-element-content silex-container-content website-width prevent-draggable silex-id-1564165916629-15"><div data-silex-type="container" class="editable-style container-element silex-id-1564165916629-16" style=""></div><div data-silex-type="text" class="editable-style text-element card silex-id-1564165916636-19" style=""><div class="silex-element-content normal"><p><br></p><p><br></p><p><br></p><p><br></p><h3><br></h3><h3>Karst<br></h3></div></div><div data-silex-type="text" class="editable-style text-element card silex-id-1564165916640-21" style=""><div class="silex-element-content normal"><p></p><p>Les suivis long-terme assurés par l'observatoire sont les suivants:</p>
+<ul>
+<li>
+Suivi des paramètres physiques, hydrochimique, isotopique et de 
+fluorescence naturelle à la source de fontaine de Vaucluse et pour 
+plusieurs dizaines de points d'écoulements en zone non saturée (galerie 
+du LSBB)</li>
+<li>Suivi hydrodynamique en cavité karstique et forage (ZS et ZNS)</li>
+<li>Suivi météorologique (site du LSBB)</li>
+</ul>
+<p>Le suivi hydrométrique de la source est assuré par 
+les services de l'état: moyennes mensuelles depuis 1887, débits 
+journaliers depuis 1967 et horaires depuis 1994.</p><p></p></div></div><a href="fontaine_en.html" data-silex-type="text" class="editable-style text-element button-inverted-light silex-id-1564165916639-20" style=""><div class="silex-element-content normal"><p>données <b>→</b><br></p></div></a><div data-silex-type="text" class="editable-style text-element text-style-2 silex-id-1564165916645-24" style=""><div class="silex-element-content normal"><h2></h2><h3><b>FONTAINE DE VAUCLUSE <br></b></h3><h3><b>&nbsp;LSBB (Laboratoire souterrain à Bas Bruit) </b></h3><p></p><p>Avec un débit interannuel moyen de 20 m3/s, la Fontaine de Vaucluse est 
 l'une des plus importantes sources karstiques d'Europe. Il s'agit en 
 effet de l'exutoire quasi-unique d'un système karstique exceptionnel 
 tant par la surface de son bassin d'alimentation (1130 km²) que par 
@@ -178,19 +190,7 @@ ainsi été reconnu jusqu'à la côte de -204 m NGF, et est à l'origine du
 terme système vauclusien qui désigne les systèmes karstiques dont le 
 réseau de drainage est développé sous le niveau de leur exutoire. En 
 aval de la source, les Sorgues sont associées à des enjeux sociétaux 
-importants (annonce de crue, irrigation, biodiversité et tourisme vert).<br></p><br><p></p></div>﻿﻿</div></div><div data-silex-type="text" class="editable-style text-element card silex-id-1564165916636-19" style=""><div class="silex-element-content normal"><p><br></p><p><br></p><p><br></p><p><br></p><h3><br></h3><h3>Karst<br></h3></div></div><div data-silex-type="text" class="editable-style text-element card silex-id-1564165916640-21" style=""><div class="silex-element-content normal"><p></p><p>Les suivis long-terme assurés par l'observatoire sont les suivants:</p>
-<ul>
-<li>
-Suivi des paramètres physiques, hydrochimique, isotopique et de 
-fluorescence naturelle à la source de fontaine de Vaucluse et pour 
-plusieurs dizaines de points d'écoulements en zone non saturée (galerie 
-du LSBB)</li>
-<li>Suivi hydrodynamique en cavité karstique et forage (ZS et ZNS)</li>
-<li>Suivi météorologique (site du LSBB)</li>
-</ul>
-<p>Le suivi hydrométrique de la source est assuré par 
-les services de l'état: moyennes mensuelles depuis 1887, débits 
-journaliers depuis 1967 et horaires depuis 1994.</p><p></p></div></div><a href="fontaine_en.html" data-silex-type="text" class="editable-style text-element button-inverted-light silex-id-1564165916639-20" style=""><div class="silex-element-content normal"><p>Book now <b>→</b><br></p></div></a></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1564164714694-3 page-fontaine paged-element page-link-active"><div data-silex-type="container" class="editable-style container-element silex-element-content silex-container-content website-width prevent-draggable silex-id-1564164714694-4"><div data-silex-type="container" class="editable-style container-element silex-id-1564164714695-5" style=""></div><div data-silex-type="text" class="editable-style text-element text-style-2 silex-id-1564164714710-13" style=""><div class="silex-element-content normal"><h2></h2><h3><b>FONTAINE DE VAUCLUSE <br></b></h3><p></p><h2></h2><h3><b>&nbsp;LSBB (Laboratoire souterrain à Bas Bruit) </b></h3><p></p></div>﻿﻿</div><div data-silex-type="text" class="editable-style text-element card silex-id-1564164714702-8" style=""><div class="silex-element-content normal"><p><br></p><p><br></p><p><br></p><p><br></p><h3><br></h3><h3>Karst<br></h3><br></div></div><a href="fontaine_en.html" data-silex-type="text" class="editable-style text-element button-inverted-light silex-id-1564164714704-9" style=""><div class="silex-element-content normal"><p>Données <b>→</b><br></p></div></a><div data-silex-type="text" class="editable-style text-element silex-id-1564164714705-10 text-style-4" style=""><div class="silex-element-content normal">Les travaux menés au sein de l'observatoire visent à améliorer la 
+importants (annonce de crue, irrigation, biodiversité et tourisme vert).<br></p><p></p></div>﻿﻿</div></div></div><div data-silex-type="container" class="prevent-draggable container-element editable-style section-element silex-id-1564164714694-3 page-fontaine paged-element page-link-active"><div data-silex-type="container" class="editable-style container-element silex-element-content silex-container-content website-width prevent-draggable silex-id-1564164714694-4"><div data-silex-type="container" class="editable-style container-element silex-id-1564164714695-5" style=""></div><div data-silex-type="text" class="editable-style text-element text-style-2 silex-id-1564164714710-13" style=""><div class="silex-element-content normal"><h2></h2><h3><b>FONTAINE DE VAUCLUSE <br></b></h3><p></p><h2></h2><h3><b>&nbsp;LSBB (Laboratoire souterrain à Bas Bruit) </b></h3><p></p></div>﻿﻿</div><div data-silex-type="text" class="editable-style text-element card silex-id-1564164714702-8" style=""><div class="silex-element-content normal"><p><br></p><p><br></p><p><br></p><p><br></p><h3><br></h3><h3>Karst<br></h3><br></div></div><a href="fontaine_en.html" data-silex-type="text" class="editable-style text-element button-inverted-light silex-id-1564164714704-9" style=""><div class="silex-element-content normal"><p>Données <b>→</b><br></p></div></a><div data-silex-type="text" class="editable-style text-element silex-id-1564164714705-10 text-style-4" style=""><div class="silex-element-content normal">Les travaux menés au sein de l'observatoire visent à améliorer la 
 compréhension et la modélisation conceptuelle et numérique du 
 fonctionnement hydrodynamique et hydrochimique des différents 
 compartiments des hydrosystèmes karstiques, en contexte de changement 
